bugfix mobile scrollbar

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -66,6 +66,7 @@ main {
     border: none;
     position: relative;
     display: none;
+    overflow: auto;
 }
 
 .main__link-back {
